--- a/layouts/_internal/google_analytics_async.html
+++ b/layouts/_internal/google_analytics_async.html
@@ -3,4 +3,5 @@
   src="https://ack.knabel.dev/ack.js"
   data-ackee-server="https://ack.knabel.dev"
   data-ackee-domain-id="b58b1615-f9f1-4a68-9cb5-3cb947354b3a"
+  data-ackee-opts='{ "detailed": true }'
 ></script>
