--- a/layouts/_internal/google_analytics_async.html
+++ b/layouts/_internal/google_analytics_async.html
@@ -5,3 +5,4 @@
   data-ackee-domain-id="b58b1615-f9f1-4a68-9cb5-3cb947354b3a"
   data-ackee-opts='{ "detailed": true }'
 ></script>
+<script async src="https://uma.knabel.dev/uma" data-website-id="671eede6-b6f6-48a5-9716-9160e7235ca3"></script>
