feat: jump to headings in sections

--- a/themes/identity/assets/css/main.css
+++ b/themes/identity/assets/css/main.css
@@ -232,6 +232,11 @@ h2 a {
   font-size: 36px;
 }
 
+h2.section a {
+  color: var(--text-color);
+}
+
+
 header nav a {
   color: var(--text-color);
 }
