--- a/themes/identity/layouts/section.html
+++ b/themes/identity/layouts/section.html
@@ -5,7 +5,7 @@
   {{ if eq (len .Pages) 0 }}
     {{ continue }}
   {{ end }}
-  <h2>{{ .Key }}</h2>
+  <h2 id="{{ .Key }}" class="section"><a href="#{{ .Key }}">{{ .Key }}</a></h2>
     {{ range .Pages }}
     <section class="article-compact">
       {{ $p := . }}
