chore: sneaky header

--- a/themes/identity/layouts/_partials/head.html
+++ b/themes/identity/layouts/_partials/head.html
@@ -13,6 +13,7 @@
 
 <link rel="me" href="https://mastodon.social/@vknabel">
 <meta name="fediverse:creator" content="@vknabel@mastodon.social">
+<script defer src="https://uma.knabel.dev/umami" data-website-id="6c602988-83e0-47c7-a844-d7c4e6edc43d" data-domains="www.vknabel.com"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="{{ with .Description }}{{ . }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}{{ end }}" />
 <meta property="og:image" content="{{ .Site.Params.og_image }}"/>
